# TradingSystem

./: .clang-format  .gitignore  API_DOCUMENTATION.md  ARTIFACT-REGISTRY-MIGRATION.md  CLAUDE.md  CMakeLists.txt  DEPLOYMENT.md  Dockerfile  GCP-PERMISSIONS-FIX.md  GITHUB-AUTH-FIX.md  README.md  TradingSystem.sln  URGENT-FIX-GCR-ERROR.md  WORKLOAD-IDENTITY-FIX.md  cleanup-workload-identity.bat  cleanup-workload-identity.sh  cloudbuild-migrate.yaml  cloudbuild.yaml  cloudrun-service.yaml  deploy-gcp.bat  deploy-gcp.sh  diagnose-github-auth.bat  diagnose-github-auth.sh  docker-compose.yml  fix-gcp-permissions.bat  fix-gcp-permissions.sh  migrate-gcr-to-ar.sh  migrate-to-artifact-registry-complete.sh  migrate-to-artifact-registry-phase2.sh  migrate-to-artifact-registry-phase3.sh  migrate-to-artifact-registry-quick.sh  migrate-to-artifact-registry.bat  migrate-to-artifact-registry.sh  setup-artifact-registry.bat  setup-artifact-registry.sh  setup-cloud-build-trigger.bat  setup-cloud-build-trigger.sh  setup-gcp-iam.bat  setup-gcp-iam.sh  setup-github-auth.bat  (+6 more)
.github/workflows/: deploy-workload-identity.yml  deploy.yml
.specify/memory/: constitution.md
TradingSystemApp/: TradingSystemApp.cpp  TradingSystemApp.vcxproj  TradingSystemApp.vcxproj.filters
cmake/: CompilerWarnings.cmake
config/: development.ini  development.json  production.ini  production.json
data/: market_data.json
include/contracts/: trading_engine_api.hpp  ui_interface.hpp
include/trading_core/: structs.h
scripts/: build.bat  build.sh  run_tests.bat  run_tests.sh
specs/001-c-trading-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-c-trading-system/contracts/: trading_engine_api.hpp  ui_interface.hpp
src/: CMakeLists.txt  main.cpp
src/api/: AuthController.cpp  AuthController.h  TradingController.cpp  TradingController.h
src/common/: Constants.h  Errors.h  Types.h
src/contracts/: trading_engine_api.cpp
src/core/: OrderManager.cpp  OrderManager.h  PortfolioManager.cpp  PortfolioManager.h  TradingEngine.cpp  TradingEngine.h
src/core/engine/: execution_simulator.cpp  execution_simulator.hpp  trading_engine.cpp  trading_engine.hpp
src/core/messaging/: message_queue.cpp  message_queue.hpp
src/core/models/: instrument.cpp  instrument.hpp  market_tick.cpp  market_tick.hpp  order.cpp  order.hpp  position.cpp  position.hpp  risk_limit.cpp  risk_limit.hpp  trade.cpp  trade.hpp
src/core/risk/: risk_manager.cpp  risk_manager.hpp
src/data/: DataProvider.h  MarketDataProvider.cpp  MarketDataProvider.h
src/database/: DatabaseManager.cpp  DatabaseManager.h  IAssetRepository.h  IMarketDataRepository.h  IOrderRepository.h  IUserRepository.h  Models.cpp  Models.h
src/infrastructure/: LockFreeQueue.h  ThreadPool.cpp  ThreadPool.h
src/infrastructure/market_data/: market_data_provider.cpp  market_data_provider.hpp  websocket_connector.cpp  websocket_connector.hpp
src/infrastructure/persistence/: sqlite_service.cpp  sqlite_service.hpp
src/interfaces/: IAuthService.h  IMarketDataService.h  IOrderService.h  IPortfolioService.h
src/middleware/: AuthMiddleware.cpp  AuthMiddleware.h  RateLimiter.cpp  RateLimiter.h
src/models/: MarketData.h  Order.h  Portfolio.h  Trade.h
src/server/: HttpServer.cpp  HttpServer.h  Router.cpp  Router.h
src/strategies/: MovingAverageStrategy.cpp  MovingAverageStrategy.h  Strategy.h
src/trading/: EventGlobals.cpp  MarketData.cpp  MarketData.h  MatchingEngine.cpp  MatchingEngine.h  OrderEvents.h  OrderManager.cpp  OrderManager.h  Portfolio.cpp  Portfolio.h  RiskEngine.cpp  RiskEngine.h  Types.h
src/ui/components/: market_data_panel.cpp  market_data_panel.hpp  order_entry_panel.cpp  order_entry_panel.hpp  positions_panel.cpp  positions_panel.hpp  status_panel.cpp  status_panel.hpp  trades_panel.cpp  trades_panel.hpp
src/ui/managers/: ui_manager.cpp  ui_manager.hpp
src/ui/rendering/: opengl_context.cpp  opengl_context.hpp
src/utils/: Config.cpp  Config.h  ErrorResponse.h  JsonParser.cpp  JsonParser.h  JwtToken.cpp  JwtToken.h  Logger.cpp  Logger.h  Result.h  config.cpp  config.hpp  exceptions.cpp  exceptions.hpp  logging.cpp  logging.hpp
tests/: CMakeLists.txt  OrderManagerTest.cpp  TradingEngineTest.cpp  test_main.cpp
tests/integration/: test_api_endpoints.cpp  test_data_persistence.cpp  test_market_data_flow.cpp  test_order_lifecycle.cpp  test_position_tracking.cpp  test_risk_validation.cpp
tests/performance/: test_order_latency.cpp
tests/server/: test_HttpServer.cpp
tests/trading/: test_MarketData.cpp  test_MatchingEngine.cpp  test_OrderManager.cpp  test_Portfolio.cpp  test_RiskEngine.cpp
tests/unit/core/: test_risk_manager_interface.cpp  test_trading_engine_interface.cpp
tests/unit/infrastructure/: test_market_data_provider_interface.cpp  test_persistence_service_interface.cpp
tests/unit/ui/: test_market_data_panel_interface.cpp  test_order_entry_panel_interface.cpp  test_positions_panel_interface.cpp  test_ui_manager_interface.cpp
